--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -21,19 +21,17 @@ jobs:
 
       - name: Make changes (example)
         run: |
-          # Place any commands here that modify the repo, e.g. build or formatting
-          echo "// updated at $(date -u)" >> CHANGES.md
-
-      - name: Commit and push
+           Place any commands here that modify the repo, e.g. build or formatting
+           - name: Commit and push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add -A
-          if git diff --staged --quiet; then
+          run: |
+           git config user.name "github-actions[bot]"
+           git add -A
+           if git diff --staged --quiet; then
             echo "No changes to commit"
-          else
-            git commit -m "chore: automated changes by workflow"
+           else
+             git commit -m "chore: automated changes by workflow"
             git push origin HEAD:main
-          fi
+           fi
+  
